cicd/openshift-pipelines/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: bootable-containers-cicd
  labels:
    app.kubernetes.io/name: bootable-containers
    app.kubernetes.io/component: cicd
