cicd/openshift-pipelines/eventlistener.yaml
---
# Route to expose the EventListener
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: bootc-webhook
  namespace: bootable-containers-cicd
spec:
  to:
    kind: Service
    name: el-bootc-webhook-listener
  port:
    targetPort: http-listener
  tls:
    termination: edge
